--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+	<title> Accessible portfolio </title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
@@ -10,6 +11,25 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h1 role = "heading"> Priyank's portfolio </h1>
+
+	<nav role = "navigation">
+		<ul role = "list">
+			<li role = "listitem"><a href = "#about"> About </a></li>
+			<li role = "listitem"><a href = "#projects"> Projects </a></li>
+			<li role = "listitem"><a href = "#contacts"> Contacts </a></li>
+		</ul>
+	</nav>
+
+	<img role = "img" src = "C:\Users\Priyank Bansal\Documents\me.jpg" alt = "priyank bansal profile picture ">
+
+	<p id = "about"> I am a web developer passionate about building website </p>
+
+	<ul role = "list">
+		<li role = "listitem"> HTML AND CSS </li>
+		<li role = "listitem"> JAVASCRIPT </li>
+		<li role = "listitem"> API TESTING WITH POSTMAN </li>
+	</ul>
 
 </body>
 
